fix transaction icon spacing

--- a/src/Components/Display/Table/Table.module.scss
+++ b/src/Components/Display/Table/Table.module.scss
@@ -2,8 +2,7 @@
   :global {
     .ant-table-tbody > tr > td,
     .ant-table-thead > tr > th {
-      padding-top: 23px;
-      padding-bottom: 23px;
+      padding: 23px 15px;
     }
     .ant-table-thead > tr > th {
       background-color: transparent;
